--- a/Resto/estilos.css
+++ b/Resto/estilos.css
@@ -5,8 +5,6 @@ body{
     margin: 0;
     padding: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    scale: 1;
-    animation: fade 750ms;
 }
 
 h1{ font-size: 3.5em;}
@@ -15,6 +13,9 @@ h3{ font-size: 2em;}
 p{font-size: 1.25em;}
 ul{list-style: none;}
 
+.servicios{
+    animation: fade 600ms;
+}
 
 button{
     font-size: 1.5em;
@@ -35,6 +36,7 @@ button:hover{
 .contenedor{
     max-width: 1400px;
     margin: auto;
+    animation: fade 600ms;
 }
 
 header{
@@ -54,10 +56,12 @@ header .logo:hover{
     padding-right: 20p;
 }
 header .contenedor{
+    animation: fade 300ms;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
+
 header nav{
     display: flex;
     flex-direction: column;
@@ -92,9 +96,11 @@ header a:hover{
     background-repeat: no-repeat;
     background-size: cover;
     background-position:  center center;
+    
 }
 #hero h1{
     color: rgb(255, 255, 255);
+    animation: fade 600ms;
 }
 
 
@@ -113,6 +119,7 @@ header a:hover{
     margin: 0px;
     margin-bottom: 30px;
     padding-top: 80px;
+    animation: fade 600ms;
     
 }
 #servicios p{
@@ -265,6 +272,7 @@ form{
         rgba(123, 0, 255, 0.2),
         rgba(0, 255, 255, 0.3)
     );
+    animation: fade 800ms;
 }
 
 .input-gruop{
@@ -355,9 +363,17 @@ input::placeholder, textarea::placeholder{
     min-height: 100px;
 }
 
-@keyframe fade {
+@keyframes fade {
     from {
+        transform-origin: center;
+        transition-timing-function: ease;
         opacity: 0%;
-        scale: 50%;
+        scale: 75%;
+    }
+    to{
+        transform-origin: center;
+        transition-timing-function: ease;
+        opacity: 100%;
+        scale: 100%;
     }
 }
